# fast-musicgen

./: .gitignore  README.md  pyproject.toml
fast_musicgen/: __init__.py  lm.py  musicgen.py  scheduler.py  text_encoder.py
fast_musicgen/layers/: causal_attn.py  cross_attn.py  ffn.py
