[project]
name = "fast-musicgen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.3",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "mlx-metal>=0.29.3",
    "transformers>=4.57.1",
]
