[project]
name = "fast-musicgen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
    "tqdm",
    "numpy"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "mlx-metal>=0.29.3",
    "transformers>=4.57.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
